--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,16 +11,25 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^5.0.6",
+    "@aws-sdk/client-cognito-identity": "^3.549.0",
+    "@aws-sdk/client-transcribe-streaming": "^3.549.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.549.0",
     "@cloudscape-design/components": "^3.0.597",
     "@cloudscape-design/global-styles": "^1.0.27",
     "@react-icons/all-files": "^4.1.0",
+    "@types/lodash.debounce": "^4.0.9",
     "aws-amplify": "^5.3.5",
+    "immutability-helper": "^3.1.1",
+    "lodash.debounce": "^4.0.8",
+    "microphone-stream": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "swr": "^2.2.5",
     "vite-plugin-node-polyfills": "^0.21.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
