--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^5.0.6",
     "@aws-sdk/client-cognito-identity": "^3.549.0",
+    "@aws-sdk/client-transcribe": "^3.549.0",
     "@aws-sdk/client-transcribe-streaming": "^3.549.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.549.0",
     "@cloudscape-design/components": "^3.0.597",
