--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "lint": "run-s root:lint web:lint cdk:lint",
+    "lint": "run-s root:lint webapp:lint cdk:lint",
     "root:lint": "npx prettier --write .",
-    "web:devw": "source ./setup-env.sh && VITE_APP_VERSION=${npm_package_version} npm -w packages/web run dev",
-    "web:dev": "VITE_APP_VERSION=${npm_package_version} npm -w packages/web run dev",
-    "web:build": "VITE_APP_VERSION=${npm_package_version} npm -w packages/web run build",
-    "web:lint": "npm -w packages/web run lint",
+    "web:devw": "source ./setup-env.sh && npm -w packages/webapp run dev",
+    "web:dev": "npm -w packages/webapp run dev",
+    "web:build": "npm -w packages/webapp run build",
+    "web:lint": "npm -w packages/webapp run lint",
     "cdk:deploy": "npm -w packages/cdk run cdk deploy -- --all",
     "cdk:destroy": "npm -w packages/cdk run cdk destroy",
     "cdk:lint": "npm -w packages/cdk run lint"
