cloudfrontとs3でデプロイ

--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@aws-cdk/aws-cognito-identitypool-alpha": "^2.135.0-alpha.0",
+    "@aws-solutions-constructs/aws-cloudfront-s3": "^2.54.1",
     "aws-cdk-lib": "2.135.0",
-    "constructs": "^10.0.0",
+    "constructs": "^10.3.0",
+    "deploy-time-build": "^0.3.17",
     "source-map-support": "^0.5.21"
   }
 }
