--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^5.0.6",
+    "@aws-sdk/client-bedrock-runtime": "^3.549.0",
     "@aws-sdk/client-cognito-identity": "^3.549.0",
     "@aws-sdk/client-transcribe": "^3.549.0",
     "@aws-sdk/client-transcribe-streaming": "^3.549.0",
@@ -28,7 +29,6 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "swr": "^2.2.5",
-    "vite-plugin-node-polyfills": "^0.21.0",
     "vite-plugin-svgr": "^4.2.0",
     "zustand": "^4.5.2"
   },
@@ -41,7 +41,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-node-polyfills": "^0.21.0"
   }
 }
