--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@aws-amplify/ui-react": "^6.11.1",
+    "aws-amplify": "^6.14.3",
+    "microphone-stream": "^6.0.1"
+  }
 }
