--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -10,22 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^5.0.6",
+    "@aws-amplify/ui-react": "^6.11.1",
     "@aws-sdk/client-bedrock-runtime": "^3.549.0",
     "@aws-sdk/client-cognito-identity": "^3.549.0",
     "@aws-sdk/client-transcribe": "^3.549.0",
     "@aws-sdk/client-transcribe-streaming": "^3.549.0",
+    "@aws-sdk/client-translate": "^3.787.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.549.0",
     "@cloudscape-design/components": "^3.0.597",
     "@cloudscape-design/global-styles": "^1.0.27",
     "@react-icons/all-files": "^4.1.0",
     "@types/lodash.debounce": "^4.0.9",
-    "aws-amplify": "^5.3.5",
+    "aws-amplify": "^6.14.3",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
     "immutability-helper": "^3.1.1",
     "lodash.debounce": "^4.0.8",
     "microphone-stream": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "swr": "^2.2.5",
