--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "web:lint": "npm -w packages/webapp run lint",
     "cdk:deploy": "npm -w packages/cdk run cdk deploy -- --all",
     "cdk:destroy": "npm -w packages/cdk run cdk destroy",
-    "cdk:lint": "npm -w packages/cdk run lint"
+    "cdk:lint": "npm -w packages/cdk run lint",
+    "build:all": "npm -w run web:build"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.4",
-    "crypto-browserify": "^3.12.0",
+    "crypto-browserify": "^3.12.0",   
     "css-select": "^5.1.0",
     "domain-browser": "^5.5.0",
     "npm-run-all": "^4.1.5",
@@ -30,5 +31,8 @@
     "@aws-amplify/ui-react": "^6.11.1",
     "aws-amplify": "^6.14.3",
     "microphone-stream": "^6.0.1"
+  },
+  "engines": {
+    "node": "^18.0.0 || ^20.0.0 || >=22.0.0"
   }
 }
