--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -12,18 +12,18 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "20.11.30",
-    "aws-cdk": "2.135.0",
+    "@types/node": "^20.17.30",
+    "aws-cdk": "^2.1012.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.135.0-alpha.0",
-    "@aws-solutions-constructs/aws-cloudfront-s3": "^2.54.1",
-    "aws-cdk-lib": "2.135.0",
-    "constructs": "^10.3.0",
+    "@aws-cdk/aws-cognito-identitypool-alpha": "^2.186.0-alpha.0",
+    "@aws-solutions-constructs/aws-cloudfront-s3": "^2.84.0",
+    "aws-cdk-lib": "^2.191.0",
+    "constructs": "^10.4.2",
     "deploy-time-build": "^0.3.17",
     "source-map-support": "^0.5.21"
   }
