--- a/packages/cdk/tsconfig.json
+++ b/packages/cdk/tsconfig.json
@@ -6,6 +6,7 @@
       "es2020",
       "dom"
     ],
+    "types": ["node"],
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
