--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -11,44 +11,44 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.1",
-    "@aws-sdk/client-bedrock-runtime": "^3.549.0",
-    "@aws-sdk/client-cognito-identity": "^3.549.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.797.0",
+    "@aws-sdk/client-cognito-identity": "^3.797.0",
     "@aws-sdk/client-transcribe": "^3.549.0",
     "@aws-sdk/client-transcribe-streaming": "^3.549.0",
-    "@aws-sdk/client-translate": "^3.787.0",
+    "@aws-sdk/client-translate": "^3.797.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.549.0",
     "@cloudscape-design/components": "^3.0.597",
     "@cloudscape-design/global-styles": "^1.0.27",
-    "@react-icons/all-files": "^4.1.0",
     "@types/lodash.debounce": "^4.0.9",
     "aws-amplify": "^6.14.3",
-    "i18next": "^24.2.3",
+    "globals": "^16.0.0",
+    "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.4",
     "immutability-helper": "^3.1.1",
-    "lodash.debounce": "^4.0.8",
     "microphone-stream": "^6.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.4.1",
-    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "swr": "^2.2.5",
     "vite-plugin-svgr": "^4.2.0",
-    "zustand": "^4.5.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.25.1",
+    "eslint-plugin-boundaries": "^5.0.1",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-node-polyfills": "^0.21.0"
+    "typescript-eslint": "^8.31.0",
+    "vite": "^6.3.3",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
